# plasmopy

./: .gitignore  .pre-commit-config.yaml  AUTOMATED_DATA_PULL_README.html  AUTOMATED_DATA_PULL_README.md  CONFIGURATION_GUIDE.html  CONFIGURATION_GUIDE.md  DECISION_SUPPORT_TOOL_README.md  LICENSE  MANUAL.html  MANUAL.md  Makefile  README.html  README.md  Rplot.R  SUPPORT_DECISION_TOOL_README.html  SUPPORT_DECISION_TOOL_README.md  plasmopy-app.py  publiccode.yml  pyproject.toml  run_cron.sh
config/: main.yaml  secrets.example.yaml
data/input/: 2023_meteo_changins.csv  2023_qPCR_changins.chasselas.csv  2023_qPCR_changins.labo.exterieur.csv  2023_qPCR_changins.pinot.noir.csv  2024_AI_changins.chasselas.csv  2024_AI_changins.labo.exterieur.csv  2024_AI_changins.pinot.noir.csv  2024_AI_dailySum_changins.chasselas.csv  2024_AI_dailySum_changins.labo.exterieur.csv  2024_AI_dailySum_changins.pinot.noir.csv  2024_meteo_changins.csv  2024_qPCR_changins.chasselas.csv  2024_qPCR_changins.labo.exterieur.csv  2024_qPCR_changins.pinot.noir.csv  2025_AI_changins.chasselas.csv  2025_AI_changins.labo.exterieur.csv  2025_AI_changins.pinot.noir.csv  2025_AI_dailySum_changins.chasselas.csv  2025_AI_dailySum_changins.labo.exterieur.csv  2025_AI_dailySum_changins.pinot.noir.csv  2025_meteo_changins.csv  2025_qPCR_changins.chasselas.csv  2025_qPCR_changins.pinot.noir.csv  (+1 more)
models/: changins.yaml
src/: __init__.py  automated_weather_pull.py  decision_support_tool.py  infection_event.py  infection_model.py  load_data.py  main.py  plots.py  process_data.py  support_decision_tool.py  utils.py
(+55 files in other folders)
