[tool.poetry]
name = "plasmopy"
version = "1.0"
description = "Python implementation of the Vitimeteo Plasmopara model at Agroscope"
authors = ["Livio Ruzzante"]

[tool.poetry.dependencies]
python = "3.12.3"
dvc = "2.10.0"
hydra-core = "1.3"
matplotlib = "3.8.4"
pandas = "2.0.3"
plotly = "5.22.0"
pdoc3 = "0.10.0"
numpy = "1.26.2"
streamlit = "1.37.1"
suntimes = "1.1.2"
pytz = "2025.1"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"
pre-commit = "2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
